--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
-#title: Dinky theme
-#description: Dinky is a red hot theme for GitHub Pages.
+title: Widget Explorateur GRIST
+description: Autre description
 show_downloads: true
 google_analytics:
 theme: jekyll-theme-dinky
