--- a/_config.yml
+++ b/_config.yml
@@ -2,4 +2,4 @@ title: Widget Explorateur GRIST
 description: Autre description
 show_downloads: true
 google_analytics:
-theme: jekyll-theme-dinky
+theme: jekyll-theme-leap-day
