--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,6 @@
 title: Widget Explorateur GRIST
+logo: /assets/img/logo.png
 description: Autre description
 show_downloads: true
 google_analytics:
-theme: jekyll-theme-leap-day
+theme: jekyll-theme-minimal
