--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
-title: Widget Explorateur GRIST
+title: Widget Explorateur
 logo: /assets/img/logo.png
-description: Autre description
+description: Explorez vos tables GRIST
 show_downloads: true
 google_analytics:
 theme: jekyll-theme-minimal
